# contree

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: cmake.yml
code/DataStructures/include/: dataview.h
code/DataStructures/src/: dataset.cpp  dataview.cpp  tree.cpp
code/Engine/src/: general_solver.cpp  specialized_solver.cpp
code/Utilities/include/: configuration.h  dynamic_bitset.h  parameter_handler.h
datasets/: avila.txt  bank.txt  bidding.txt  eeg.txt  fault.txt  htru.txt  magic.txt  occupancy.txt  page.txt  raisin.txt  rice.txt  room.txt  segment.txt  wilt.txt
examples/: contree_vs_cart.py  graphviz_example.py  gridsearch_example.py  simple_example.py
train-datasets/: avila.txt  bank.txt  bean.txt  bidding.txt  eeg.txt  fault.txt  htru.txt  magic.txt  occupancy.txt  page.txt  raisin.txt  rice.txt  room.txt  segment.txt  wilt.txt
